--- a/AngularBase/ClientApp/src/app/user-account/login/login.component.html
+++ b/AngularBase/ClientApp/src/app/user-account/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="col-md-4  offset-md-4">
-    <div class="form-content">
+  <div class="card">
+    <div class="form-content login-card">
       <div class="form-items">
         <h1>Log In</h1>
 
