--- a/AngularBase/ClientApp/src/app/user-account/create-account/create-account.component.html
+++ b/AngularBase/ClientApp/src/app/user-account/create-account/create-account.component.html
@@ -46,8 +46,8 @@
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <select [(ngModel)]="User.SecurityQuestionType1FK" required>
-            <option value="0">--None--</option>
+          <select  class="form-select" [(ngModel)]="User.SecurityQuestionType1FK" required>
+            <option [value]="null">--None--</option>
             <option *ngFor="let securityQuestion of SecurityQuestionTypes" value={{securityQuestion.SecurityQuestionTypePK}}>
               {{securityQuestion.Description}}
             </option>
@@ -63,8 +63,8 @@
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <select [(ngModel)]="User.SecurityQuestionType2FK" required>
-            <option value="0">--None--</option>
+          <select  class="form-select" [(ngModel)]="User.SecurityQuestionType2FK" required>
+            <option [value]="null">--None--</option>
             <option *ngFor="let securityQuestion of SecurityQuestionTypes" value={{securityQuestion.SecurityQuestionTypePK}}>
               {{securityQuestion.Description}}
             </option>
